feat: service, career, footer, partners, contacts

--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -101,8 +101,17 @@
                 <div class="accordion-icon"></div>
               </div>
               <div class="accordion__content">
-                <p>Разработка backend части нового функционала системы с применением
-                  Python, Django.</p>
+                <div class="enumeration__wrapper">
+                  <div class="enumeration__text">
+                    <p>Разработка backend части нового функционала системы с применением
+                      Python, Django.</p>
+                    <p>Разработка backend части нового функционала системы с применением
+                      Python, Django.</p>
+                    <p>Разработка backend части нового функционала системы с применением
+                      Python, Django.</p>
+                  </div>
+                  <a href="#" class="link enumeration__link">Подробнее</a>
+                </div>
                 <a class="link link_green-arrow" href="#career-section">отправить резюме</a>
               </div>
             </li>
@@ -112,8 +121,13 @@
                 <div class="accordion-icon"></div>
               </div>
               <div class="accordion__content">
-                <p>Вакансия Fullstack разработчика на проекте для одной из крупнейших ритейл-компаний (Frontend: JS
-                  React, Backend: Kotlin, Spring Boot)</p>
+                <div class="enumeration__wrapper">
+                  <div class="enumeration__text">
+                    <p>Вакансия Fullstack разработчика на проекте для одной из крупнейших ритейл-компаний (Frontend: JS
+                      React, Backend: Kotlin, Spring Boot)</p>
+                  </div>
+                  <a href="#" class="link enumeration__link">Подробнее</a>
+                </div>                
                 <a class="link link_green-arrow" href="#career-section">отправить резюме</a>
               </div>
             </li>
@@ -123,8 +137,13 @@
                 <div class="accordion-icon"></div>
               </div>
               <div class="accordion__content">
-                <p>Дивизион бизнес-консалтинга реализует проекты по оптимизации и автоматизации процессов всех видов
-                  учета, бюджетирования, и казначейства</p>
+                <div class="enumeration__wrapper">
+                  <div class="enumeration__text">
+                    <p>Дивизион бизнес-консалтинга реализует проекты по оптимизации и автоматизации процессов всех видов
+                      учета, бюджетирования, и казначейства</p>
+                  </div>
+                  <a href="#" class="link enumeration__link">Подробнее</a>
+                </div>                 
                 <a class="link link_green-arrow" href="#career-section">отправить резюме</a>
               </div>
             </li>
@@ -134,8 +153,12 @@
                 <div class="accordion-icon"></div>
               </div>
               <div class="accordion__content">
-                <p>Дивизион бизнес-консалтинга реализует проекты по оптимизации и автоматизации процессов всех видов
-                  учета, бюджетирования, и казначейства</p>
+                <div class="enumeration__wrapper">
+                  <div class="enumeration__text">
+                    <p>Дивизион бизнес-консалтинга реализует проекты по оптимизации и автоматизации процессов всех видов учета, бюджетирования, и казначейства. Вакансия Fullstack разработчика на проекте для одной из крупнейших ритейл-компаний (Frontend: JS React, Backend: Kotlin, Spring Boot)</p>
+                  </div>
+                  <a href="#" class="link enumeration__link">Подробнее</a>
+                </div>                
                 <a class="link link_green-arrow" href="#career-section">отправить резюме</a>
               </div>
             </li>
