--- a/src/html/pages/contacts.html
+++ b/src/html/pages/contacts.html
@@ -65,46 +65,50 @@
       <div class="container">
         <div class="enumeration">
           <div class="enumeration__item">
-            <h3>Центральный офис</h3>
+            <div class="contacts__preview">
+              <h3>Сиразетдинов Тимур Рамзилевич</h3>
+              <div class="contacts__position">
+                Руководитель центра компетенции по системам технической безопасности и связи
+              </div>
+            </div>
             <div class="contacts__list">
-              <span>Россия, 450106,
-                Уфа, ул. Пушкина, д. 33/2,
-                блок А, 2 этаж, офис 201
-              </span>
-              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a> (доб. 186)</span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
           <div class="enumeration__item">
-            <h3>Отдел продаж</h3>
+            <div class="contacts__preview">
+              <h3>Полетаев Руслан Владимирович</h3>
+              <div class="contacts__position">
+                Руководитель отдела продвижения комплексных проектов
+              </div>
+            </div>
             <div class="contacts__list">
-              <span>Россия, 450106,
-                Уфа, ул. Пушкина, д. 33/2,
-                блок А, 2 этаж, офис 201
-              </span>
-              <span>Телефон: <a href="Диалог+73472921470" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a> (доб. 186)</span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
           <div class="enumeration__item">
-            <h3>Центр поддержки</h3>
+            <div class="contacts__preview">
+              <h3>Яборов Илья Сергеевич</h3>
+              <div class="contacts__position">
+                Руководитель производственного департамента
+              </div>
+            </div>
             <div class="contacts__list">
-              <span>Россия, 450106,
-                Уфа, ул. Пушкина, д. 33/2,
-                блок А, 2 этаж, офис 201
-              </span>
-              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a> (доб. 186)</span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
           <div class="enumeration__item">
-            <h3>HR</h3>
+            <div class="contacts__preview">
+              <h3>Кузьменко Максим Андреевич</h3>
+              <div class="contacts__position">
+                Технический директор
+              </div>
+            </div>
             <div class="contacts__list">
-              <span>Россия, 450106,
-                Уфа, ул. Пушкина, д. 33/2,
-                блок А, 2 этаж, офис 201
-              </span>
-              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
+              <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a> (доб. 186)</span>
               <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
             </div>
           </div>
