--- a/src/html/pages/service-detail.html
+++ b/src/html/pages/service-detail.html
@@ -38,6 +38,10 @@
           Данный вид исследований позволяет нам получить полный спектр данных о районе предполагаемой застройки, на
           основе которых, можно подготовить качественную проектную документацию в короткие сроки. Очень важно, чтобы
           инженерные изыскания выполнялись ответственными, высококвалифицированными и опытными специалистами.</p>
+        <ul>
+          <li>text</li>
+          <li>text</li>
+        </ul>
         <div class="enumeration accordion">
           <ul class="accordion__list">
             <li class="enumeration__item accordion__item">
