--- a/src/html/pages/about-company.html
+++ b/src/html/pages/about-company.html
@@ -164,7 +164,7 @@
       {href:'#', class: 'btn_secondary',children:'все проекты'})
     </section>
     <section class="career-section career-section_secondary">
-      <video autoplay muted loop src="@videos/career-bg.mp4"></video>
+      <video playsinline autoplay muted loop src="@videos/career-bg.mp4"></video>
       <div class="container">
         <h2>ваша успешная карьера в fort dialog </h2>
         <p>Мы определяем стандарты и вектор развития индустрии высоких технологий, изменяя мир к лучшему, формируя
