--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -113,7 +113,7 @@
 			</div>
 			<div class="solutions-section__content">
 				<div class="solutions-section__video">
-					<video autoplay muted loop src="@videos/sample-5s.mp4"></video>
+					<video playsinline autoplay muted loop src="@videos/sample-5s.mp4"></video>
 				</div>
 				<div class="solutions-section__list">
 					<div class="solution-card">
@@ -267,7 +267,7 @@
 			{href:'#', class: 'btn_secondary',children:'все проекты'})
 		</section>
 		<section class="career-section">
-			<video autoplay muted loop src="@videos/career-bg.mp4"></video>
+			<video playsinline autoplay muted loop src="@videos/career-bg.mp4"></video>
 			<div class="container">
 				<h2>ваша успешная карьера в fort dialog </h2>
 				<p>Мы определяем стандарты и вектор развития индустрии высоких технологий, изменяя мир к лучшему, формируя
