--- a/src/html/pages/service-detail.html
+++ b/src/html/pages/service-detail.html
@@ -49,73 +49,86 @@
                 <h3>Инженерно-геодезические</h3>
                 <div class="accordion-icon"></div>
               </div>
-              <ul class="list accordion__content">
-                <li>Создание опорных геодезических сетей</li>
-                <li>Геодезические наблюдения за деформациями и осадками зданий и сооружений, движениями земной
-                  поверхности
-                  и опасными природными процессами</li>
-                <li>Создание и обновление инженерно-топографических планов в масштабах 1:200 - 1:5000, в том числе в
-                  цифровой форме, съемка подземных коммуникаций и сооружений</li>
-                <li>Трассирование линейных объектов</li>
-                <li>Инженерно-гидрографические работы</li>
-                <li>Специальные геодезические и топографические работы при строительстве и реконструкции зданий и
-                  сооружений</li>
-              </ul>
+              <div class="accordion__content">
+                <ul>
+                  <li>Создание опорных геодезических сетей</li>
+                  <li>Геодезические наблюдения за деформациями и осадками зданий и сооружений, движениями земной
+                    поверхности
+                    и опасными природными процессами</li>
+                  <li>Создание и обновление инженерно-топографических планов в масштабах 1:200 - 1:5000, в том числе в
+                    цифровой форме, съемка подземных коммуникаций и сооружений</li>
+                  <li>Трассирование линейных объектов</li>
+                  <li>Инженерно-гидрографические работы</li>
+                  <li>Специальные геодезические и топографические работы при строительстве и реконструкции зданий и
+                    сооружений</li>
+                </ul>
+              </div>
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
                 <h3>Инженерно-экологические</h3>
                 <div class="accordion-icon"></div>
               </div>
-              <ul class="list accordion__content">
-                <li>Инженерно-экологическая съемка территории</li>
-                <li>Исследования химического загрязнения почвогрунтов, поверхностных и подземных вод, атмосферного
-                  воздуха, источников загрязнения</li>
-                <li>Лабораторные химико-аналитические и газохимические исследования образцов и проб почвогрунтов и воды
-                </li>
-                <li>Исследования и оценка физических воздействий и радиационной обстановки иа территории</li>
-                <li>Изучение растительности, животного мира, санитарно-эпидемиологические и медико-биологические
-                  исследования территории*</li>
-              </ul>
+              <div class="accordion__content">
+                <ul>
+                  <li>Инженерно-экологическая съемка территории</li>
+                  <li>Исследования химического загрязнения почвогрунтов, поверхностных и подземных вод, атмосферного
+                    воздуха, источников загрязнения</li>
+                  <li>Лабораторные химико-аналитические и газохимические исследования образцов и проб почвогрунтов и воды
+                  </li>
+                  <li>Исследования и оценка физических воздействий и радиационной обстановки иа территории</li>
+                  <li>Изучение растительности, животного мира, санитарно-эпидемиологические и медико-биологические
+                    исследования территории*</li>
+                </ul>
+              </div>
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
                 <h3>Инженерно-геологические</h3>
                 <div class="accordion-icon"></div>
               </div>
-              <ul class="list accordion__content">
-                <li>Инженерно-геологическая съемка в масштабах 1:500 - 1:25000.</li>
-                <li>Проходка горных выработок с их опробованием, лабораторные исследования физико-механических свойств
-                  грунтов и химических свойств проб подземных вод</li>
-                <li>Изучение опасных геологических и инженерно-геологических процессов с разработкой рекомендаций по
-                  инженерной защите территории
-                </li>
-                <li>Гидрогеологические исследования</li>
-                <li>Инженерно-геофизические исследования</li>
-                <li>Инженерно-геокриологические исследования</li>
-                <li>Сейсмологические и сейсмотектонические исследования территории, сейсмическое микрорайонирование</li>
-              </ul>
+              <div class="accordion__content">
+
+                <ul>
+                  <li>Инженерно-геологическая съемка в масштабах 1:500 - 1:25000.</li>
+                  <li>Проходка горных выработок с их опробованием, лабораторные исследования физико-механических свойств
+                    грунтов и химических свойств проб подземных вод</li>
+                  <li>Изучение опасных геологических и инженерно-геологических процессов с разработкой рекомендаций по
+                    инженерной защите территории
+                  </li>
+                  <li>Гидрогеологические исследования</li>
+                  <li>Инженерно-геофизические исследования</li>
+                  <li>Инженерно-геокриологические исследования</li>
+                  <li>Сейсмологические и сейсмотектонические исследования территории, сейсмическое микрорайонирование</li>
+                </ul>
+              </div>
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
                 <h3>Инженерно-гидрометеорологические</h3>
                 <div class="accordion-icon"></div>
               </div>
-              <ul class="list accordion__content">
-                <li>Метеорологические наблюдения и изучение гидрологического режима водных объектов</li>
-                <li>Изучение опасных гидрометеорологических процессов и явлений с расчетами их характеристик</li>
-                <li>Изучение русловых процессов водных объектов, деформаций и переработки берегов. Исследования ледового
-                  режима водных объектов</li>
-              </ul>
+              <div class="accordion__content">
+                <ul>
+                  <li>Метеорологические наблюдения и изучение гидрологического режима водных объектов</li>
+                  <li>Изучение опасных гидрометеорологических процессов и явлений с расчетами их характеристик</li>
+                  <li>Изучение русловых процессов водных объектов, деформаций и переработки берегов. Исследования ледового
+                    режима водных объектов</li>
+                </ul>
+              </div>
+
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
                 <h3>Обследование состояния грунтов основания зданий</h3>
                 <div class="accordion-icon"></div>
               </div>
-              <ul class="list accordion__content">
-                <li>Создание опорных геодезических сетей</li>
-              </ul>
+              <div class="accordion__content">
+                <ul class="list">
+                  <li>Создание опорных геодезических сетей</li>
+                </ul>
+              </div>
+
             </li>
           </ul>
         </div>
