--- a/src/html/pages/history.html
+++ b/src/html/pages/history.html
@@ -121,7 +121,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -138,7 +138,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="1995">
             <div>1995</div>
@@ -146,7 +146,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -163,7 +163,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="2000">
             <div>2000</div>
@@ -171,7 +171,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -188,7 +188,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="2002">
             <div>2002</div>
@@ -196,6 +196,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -212,7 +213,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="2006">
             <div>2006</div>
@@ -220,7 +221,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -237,7 +238,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="2010">
             <div>2010</div>
@@ -245,7 +246,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -262,7 +263,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="2014">
             <div>2000</div>
@@ -270,7 +271,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -287,7 +288,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="2020">
             <div>2020</div>
@@ -295,7 +296,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -312,7 +313,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
           <div class="history__year" id="2023">
             <div>2023</div>
@@ -320,7 +321,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -337,7 +338,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
-            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
+            <div>Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</div>
           </div>
         </div>
       </div>
