add: fraction_aducation

--- a/src/html/pages/services.html
+++ b/src/html/pages/services.html
@@ -50,6 +50,98 @@
         </div>
       </div>
     </section>
+    <section class="fraction">
+      <div class="container">
+        <div class="fraction__wrapper">
+          <div class="fraction__container fraction__container_education">
+            <div class="fraction__column">
+              <ul class="list fraction__list">
+                <li>
+                  <div class="fraction__content">
+                    <span>Объектовое <br>видеонаблюдение</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+                <li>
+                  <div class="fraction__content">
+                    <span>Инженерная инфраструктура</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+              </ul>
+              <ul class="list fraction__list">
+                <li>
+                  <div class="fraction__content">
+                    <span>Строительство дата центров <br>и центра обработки данных (ЦОД)</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+                <li>
+                  <div class="fraction__content">
+                    <span>Построение ит и инженерной инфраструктуры</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+              </ul>
+            </div>
+            <div class="fraction__column">
+              <ul class="list fraction__list">
+                <li>
+                  <div class="fraction__content">
+                    <span>Автоматическое пожаротушение <br>и автоматика здания</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+              </ul>
+            </div>
+            <div class="fraction__column">
+              <ul class="list fraction__list">
+                <li>
+                  <div class="fraction__content">
+                    <span>Антитеррористическая <br>защита</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+              </ul>
+            </div>
+            <div class="fraction__column">
+              <ul class="list fraction__list">
+                <li>
+                  <div class="fraction__content">
+                    <span>Контроль доступа <br>и учет рабочего времени</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+                <li>
+                  <div class="fraction__content">
+                    <span>Системы связи и оповещения</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+                <li>
+                  <div class="fraction__content">
+                    <span>Ит-инфраструктура</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+              </ul>
+              <ul class="list fraction__list">
+                <li>
+                  <div class="fraction__content fraction__content_bold">
+                    <span>FaceGate: система автоматизации <br>контроля и доступа</span>
+                    <a href="#">Подробнее</a>
+                  </div>                
+                </li>
+              </ul>
+            </div>    
+          </div>
+          <div class="fraction__image fraction__image_education">
+            <img src="@images/fraction-edu.webp" alt="">
+          </div>        
+        </div>
+        
+      </div>
+    </section>
     <section class="services">
       <div class="container">
         <div class="service-card service-card_secondary">
