--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -5,7 +5,7 @@
 <body>
 	<div class="container" style="padding: 50px;">
 		<h3 style="margin-bottom: 40px;">Карта сайта</h3>
-		<ol>
+		<ol style="margin-bottom: 60px;">
 			<li><a href="/" class="link" target="_blank">Главная</a></li>
 			<li><a href="/projects.html" class="link" target="_blank">Проекты</a></li>
 			<li><a href="/project-detail.html" class="link" target="_blank">Детальная проекта</a></li>
@@ -30,6 +30,40 @@
 			<li><a href="/privacy.html" class="link" target="_blank">Политика конфиденциаольности</a></li>
 			<li><a href="/success-page.html" class="link" target="_blank">Уведомление об успешной отправке формы</a></li>
 		</ol>
+
+		<h3 style="margin-bottom: 40px; text-transform: uppercase;">Разрезы</h3>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-edu.html" class="link" target="_blank">Услуги - образование</a></li>
+			<li><a href="/solutions-edu.html" class="link" target="_blank">Решения - образование</a></li>
+		</ul>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-admin.html" class="link" target="_blank">Услуги - органы государственной власти</a></li>
+			<li><a href="/solutions-admin.html" class="link" target="_blank">Решения - органы государственной власти</a></li>
+		</ul>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-medical.html" class="link" target="_blank">Услуги - здравоохранение</a></li>
+			<li><a href="/solutions-medical.html" class="link" target="_blank">Решения - здравоохранение</a></li>
+		</ul>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-factory.html" class="link" target="_blank">Услуги - промышленность</a></li>
+			<li><a href="/solutions-factory.html" class="link" target="_blank">Решения - промышленность</a></li>
+		</ul>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-roads.html" class="link" target="_blank">Услуги - транспорт</a></li>
+			<li><a href="/solutions-roads.html" class="link" target="_blank">Решения - транспорт</a></li>
+		</ul>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-oil.html" class="link" target="_blank">Услуги - нефтегазовый сектор</a></li>
+			<li><a href="/solutions-oil.html" class="link" target="_blank">Решения - нефтегазовый сектор</a></li>
+		</ul>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-agronom.html" class="link" target="_blank">Услуги - сельское хозяйство</a></li>
+			<li><a href="/solutions-agronom.html" class="link" target="_blank">Решения - сельское хозяйство</a></li>
+		</ul>
+		<ul style="margin-bottom: 20px;">
+			<li><a href="/services-airport.html" class="link" target="_blank">Услуги - аэропорт</a></li>
+			<li><a href="/solutions-airport.html" class="link" target="_blank">Решения - аэропорт</a></li>
+		</ul>
 	</div>
 
 </body>
